apt (0.8.16~exp5ubuntu5) UNRELEASED; urgency=low

  * debian/control:
    - fix VCS location

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 10 Aug 2011 06:48:11 +0200

apt (0.8.16~exp5ubuntu4) oneiric; urgency=low

  * Merge change from Robert Collins to upgrade ubuntu-keyring recommends
    to a hard dependency to match Debian behaviour and fix LP: #816606

 -- Adam Conrad <adconrad@ubuntu.com>  Tue, 09 Aug 2011 14:48:24 -0600

apt (0.8.16~exp5ubuntu3) oneiric; urgency=low

  * apt-pkg/acquire.cc:
    - fix potential divide-by-zero (LP: #823277)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 09 Aug 2011 15:56:44 +0200

apt (0.8.16~exp5ubuntu2) oneiric; urgency=low

  * test/integration/test-hashsum-verification:
    - add regression test for hashsum verification
  * apt-pkg/acquire-item.cc:
    - if no Release.gpg file is found, still load the hashes for
      verification (closes: #636314) and add test
  * apt-pkg/pkgcachegen.cc:
    - fix incorrect comparision when checking sources.list freshness

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 09 Aug 2011 09:22:14 +0200

apt (0.8.16~exp5ubuntu1) oneiric; urgency=low

  * merged new version from debian/experimental, this includes
    a ABI break and two new library packages

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 08 Aug 2011 14:30:07 +0200

apt (0.8.16~exp5) UNRELEASED; urgency=low

  * apt-pkg/makefile:
    - install sha256.h compat header
  * apt-pkg/pkgcachegen.{cc,h}:
    - use ref-to-ptr semantic in NewDepends() to ensure that the   
      libapt does not segfault if the cache is remapped in between
      (LP: #812862)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 29 Jul 2011 13:44:01 +0200

apt (0.8.16~exp4) experimental; urgency=low

  [ Julian Andres Klode ]
  * apt-pkg/pkgcache.h:
    - [ABI break] Add pkgCache::Header::CacheFileSize, storing the cache size
  * apt-pkg/pkgcachegen.cc:
    - Write the file size to the cache
  * apt-pkg/pkgcache.cc: