@@ -2,8 +2,11 @@ apt (0.8.16~exp5ubuntu5) UNRELEASED; urgency=low
 
   * debian/control:
     - fix VCS location
+  * methods/mirror.cc:
+    - include the architecture(s) in the query string as well so 
+      that the server can make better decisions
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 10 Aug 2011 06:48:11 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 11 Aug 2011 16:33:32 +0200
 
 apt (0.8.16~exp5ubuntu4) oneiric; urgency=low
 
